--- a/memeApp/Info.plist
+++ b/memeApp/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>the app will only acess the photos that you choose to create a MEME</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>the app will only acess the photos that you choose to create a MEME</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
